--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -192,14 +192,18 @@ img {
 * Стили компонента Buton (Load more)
 */
 .Button {
+  display: inline-block;
+  margin: auto;
   padding: 8px 16px;
   border-radius: 2px;
   background-color: #3f51b5;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
-  display: inline-block;
+  
+  
   color: #fff;
   border: 0;
+  border-radius: 4px;
   text-decoration: none;
   cursor: pointer;
   font-family: inherit;
@@ -215,4 +219,9 @@ img {
 .Button:hover,
 .Button:focus {
   background-color: #303f9f;
+}
+
+.Spinner {
+  display: flex;
+  justify-content: center;
 }
